--- a/requirements.yml
+++ b/requirements.yml
@@ -8,7 +8,7 @@ functional:
   - Пользователь должен иметь возможность создать игру в ботом со своими настройками
   - Пользователь должен иметь возможность создать игру с другом со своими настройками
   - Пользователь должен иметь возможность создать открытую игру со своими настройками
-  - Пользователь должен иметь возможность поменять язык программирование во время игры
+  - Пользователь должен иметь возможность поменять язык программирования во время игры
   - Пользователь должен иметь возможность видеть редактор кода соперника во время игры
   - Пользователь должен иметь возможность видеть вывод тестов
   - Пользователь должен иметь возможность выбрать язык задачи (английский или русский)
