--- a/requirements.yml
+++ b/requirements.yml
@@ -1,5 +1,6 @@
 ---
 functional:
+  - Пользователь должен иметь возможность создать пробную игру без авторизации
   - Пользователь должен иметь возможность зарегистрировать аккаунт
   - Пользователь должен иметь возможность авторизоваться на сайте через ранее созданный аккаунт
   - Пользователь должен иметь возможность сделать сковзную авторизацию через GitHub
