--- a/requirements.yml
+++ b/requirements.yml
@@ -3,7 +3,7 @@ functional:
   - Пользователь должен иметь возможность создать пробную игру без авторизации
   - Пользователь должен иметь возможность зарегистрировать аккаунт
   - Пользователь должен иметь возможность авторизоваться на сайте через ранее созданный аккаунт
-  - Пользователь должен иметь возможность сделать сковзную авторизацию через GitHub
+  - Пользователь должен иметь возможность сделать сквозную авторизацию через GitHub
   - Пользователь должен иметь возможность сделать сквозную авторизацию через Discord
   - Пользователь должен иметь возможность присоединиться к раннее созданной игре
   - Пользователь должен иметь возможность создать игру в ботом со своими настройками
