--- a/requirements.yml
+++ b/requirements.yml
@@ -2,6 +2,7 @@
 functional:
   - Пользователь должен иметь возможность создать пробную игру без авторизации
   - Пользователь должен иметь возможность зарегистрировать аккаунт
+  - Пользователь должен иметь возможность восстановить пароль
   - Пользователь должен иметь возможность авторизоваться на сайте через ранее созданный аккаунт
   - Пользователь должен иметь возможность сделать сквозную авторизацию через GitHub
   - Пользователь должен иметь возможность сделать сквозную авторизацию через Discord
