--- a/requirements.yml
+++ b/requirements.yml
@@ -28,4 +28,4 @@ non-functional:
   - Сайт должен быть протестирован на совместимость с последними версиями браузеров
   - Сайт должен быть способен обрабатывать большое количество трафика (например, 1000 одновременных пользователей)
 implicit:
-  - 
+  - Сайт должен быть переведен на разные языки
