--- a/test-cases.yml
+++ b/test-cases.yml
@@ -4,7 +4,8 @@
   requirement: |
     Пользователь должен иметь возможность зарегистрировать аккаунт
   prerequisites: |
-    Открыта стартовая страница. Пользователь не авторизован.
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь не авторизован
   test-data: |
     no-data
   steps:
@@ -19,7 +20,8 @@
   requirement: |
     Пользователь должен иметь возможность авторизоваться на сайте через ранее созданный аккаунт
   prerequisites: |
-    Открыта стартовая страница. Пользователь не авторизован
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь не авторизован
   test-data: |
     krasnogorovtest2;!Password123
   steps:
@@ -34,7 +36,9 @@
   requirement: |
     Пользователь должен иметь возможность сделать сквозную авторизацию через GitHub
   prerequisites: |
-    Открыта стартовая страница. Пользователь не авторизован. Аккаунт на сайте GitHub авторизован.
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь не авторизован
+    Аккаунт на сайте GitHub авторизован
   test-data: |
     no-data
   steps:
@@ -42,31 +46,32 @@
     - Нажать Sign up with Github
     - Дать доступ 
   expected-result: |
-    1
+    Пользователь авторизован
+
+- summary: |
+    Сквозная регистрация через Discord
+  requirement: |
+    Пользователь должен иметь возможность сделать сквозную авторизацию через Discord
+  prerequisites: |
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь не авторизован
+    Аккаунт в Discord авторизован
+  test-data: |
+    no-data
+  steps:
+    - Нажать Sign up
+    - Нажать Sign up with Discord
+    - Дать доступ 
+  expected-result: |
+    Пользователь авторизован
 
 - summary: |
     Восстановление пароля созданного аккаунта
   requirement: |
     Пользователь должен иметь возможность восстановить пароль
   prerequisites: |
-    Стартовая страница. Пользователь зарегистрирован, но не авторизован.
-  test-data: |
-    no-data
-  steps:
-    - Нажать Sign in
-    - Нажать Forgot your password?
-    - Ввести почту зарегистрированного аккаунта
-    - Открыть DevTools, вкладку Сеть
-    - Нажать Submit
-  expected-result: |
-    http метод reset_password возвращает код 200
-
-- summary: |
-    Получение письма с инструкциями о восстановлении пароля
-  requirement: |
-    Пользователь должен иметь возможность восстановить пароль
-  prerequisites: |
-    Стартовая страница. Пользователь зарегистрирован, но не авторизован.
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь зарегистрирован, но не авторизован.
   test-data: |
     no-data
   steps:
@@ -75,28 +80,54 @@
     - Ввести почту зарегистрированного аккаунта
     - Нажать Submit
     - Открыть указанный почтовый ящик
+    - Открыть письмо с инструкциями
+    - Открыть ссылку для смены пароля
+    - Ввести новый пароль
+    - Нажать Save
+    - Перейти на стартовую страницу
+    - Нажать Sign in
+    - Ввести логин и новый пароль
+    - Нажать Submit
   expected-result: |
-    Письмо с инструкциями пришло
+    Пользователь авторизован
 
 - summary: |
     Создание игры без авторизации
   requirement: |
     Пользователь должен иметь возможность создать пробную игру без авторизации
   prerequisites: |
-    Открыта стартовая страница. Пользователь не авторизован.
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь не авторизован
   test-data: |
     no-data
   steps:
     - Нажать Try Simple Battle
   expected-result: |
-    Запустилась игра
+    Редактор кода доступен для написания кода
+
+- summary: |
+    Присоединение к уже созданной игре
+  requirement: |
+    Пользователь должен иметь возможность присоединиться к раннее созданной игре
+  prerequisites: |
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
+    В списке игр есть созданные свободные игры
+  test-data: |
+    krasnogorovtest2;!Password123
+  steps:
+    - Выбрать любую свободную игру
+    - Нажать Fight
+  expected-result: |
+    Запустилась игра с противником
 
 - summary: |
     Создание игры с ботом
   requirement: |
     Пользователь должен иметь возможность создать игру в ботом со своими настройками
   prerequisites: |
-    Пользователь авторизован. Открыта главная страница.
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
   test-data: |
     Пользователь - ktest3@yandex.ru;!Password123
   steps:
@@ -114,7 +145,8 @@
   requirement: |
     Пользователь должен иметь возможность создать игру с другом со своими настройками
   prerequisites: |
-    Пользователи авторизованы в разных вкладках инкогнито. Открыты главные страницы пользователями.
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователи авторизованы в разных вкладках инкогнито
   test-data: |
     Пользователь - ktest3@yandex.ru;!Password123
     Пользователь 2 - ktest4@yandex.ru;!Password123
@@ -134,7 +166,8 @@
   requirement: |
     Пользователь должен иметь возможность создать открытую игру со своими настройками
   prerequisites: |
-    Пользователь авторизован. Открыта главная страница.
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
   test-data: |
     Пользователь - ktest3@yandex.ru;!Password123
   steps:
@@ -154,7 +187,8 @@
     Пользователь должен иметь возможность победить, если первее напишет код, что пройдет тесты
     Пользователь должен иметь возможность поменять язык программирования во время игры
   prerequisites: |
-    Пользователь авторизован. Открыта главная страница.
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
   test-data: |
     Пользователь - ktest3@yandex.ru;!Password123
     Код - const _ = require("lodash");
@@ -177,7 +211,8 @@
   requirement: |
     Пользователь должен иметь возможность сдаться
   prerequisites: |
-    Пользователь авторизован. Открыта главная страница.
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
   test-data: |
     Пользователь - ktest3@yandex.ru;!Password123
   steps:
@@ -198,7 +233,9 @@
   requirement: |
     Пользователь должен иметь возможность следить за идущей игрой других игроков
   prerequisites: |
-    Пользователь авторизован. Открыта главная страница. В списке игр есть начатая игра между двумя игроками.
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
+    В списке игр есть начатая игра между двумя игроками    
   test-data: |
     Пользователь - ktest3@yandex.ru;!Password123
   steps:
@@ -211,7 +248,9 @@
   requirement: |
     Пользователь должен иметь возможность посмотреть в записи завершенные игры
   prerequisites: |
-    Пользователь авторизован. Открыта главная страница. В истории игр есть завершенная игра.
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
+    В истории игр есть завершенная игра
   test-data: |
     Пользователь - ktest3@yandex.ru;!Password123
   steps:
@@ -221,7 +260,7 @@
     Запустился просмотр игры
 
 - summary: |
-    Создание открытого турнира
+    Создание турнира
   requirement: |
     Пользователь должен иметь возможность создавать турнир со своими настройками
   prerequisites: |
@@ -244,3 +283,132 @@
     - В модальном окне нажать Open вторым пользователем
   expected-result: |
     Запустилась турнирная игра
+
+- summary: |
+    Смена языка программирования во время игры
+  requirement: |
+    Пользователь должен иметь возможность поменять язык программирования во время игры
+  prerequisites: |
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
+  test-data: |
+    Пользователь - ktest3@yandex.ru;!Password123
+  steps:
+    - Создать игру с ботом или присоединиться уже к созданной игре
+    - Сменить язык программирования
+  expected-result: |
+    Заготовка кода задачи поменялась на выбранный язык
+
+- summary: |
+    Смена языка описания задачи во время игры
+  requirement: |
+    Пользователь должен иметь возможность выбрать язык задачи из доступных
+  prerequisites: |
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
+  test-data: |
+    Пользователь - ktest3@yandex.ru;!Password123
+  steps:
+    - Создать игру с ботом или присоединиться уже к созданной игре
+    - Сменить язык задачи
+  expected-result: |
+    Задача перевелась на выбранный язык
+
+- summary: |
+    Создание нового клана
+  requirement: |
+    Пользователь должен иметь возможность создать клан
+  prerequisites: |
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
+  test-data: |
+    Пользователь - ktest3@yandex.ru;!Password123
+  steps:
+    - В меню выбрать Settings
+    - В поле Your clan ввести название нового клана
+    - В меню выбрать Clans
+    - Найти созданный клан
+    - Нажать Show
+  expected-result: |
+    Созданный клан и информация о нем отображается
+
+- summary: |
+    Вступление в созданный клан
+  requirement: |
+    Пользователь должен иметь возможность присоединиться к уже созданному клану
+  prerequisites: |
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
+  test-data: |
+    Пользователь - ktest3@yandex.ru;!Password123
+  steps:
+    - В меню выбрать Settings
+    - В поле Your clan ввести название существующего клана
+    - В меню выбрать Clans
+    - Найти введенный клан
+    - Нажать Show
+  expected-result: |
+    Пользователь отображается в введенном клане
+
+- summary: |
+    Смена имени пользователя
+  requirement: |
+    Пользователь должен иметь возможность сменить имя
+  prerequisites: |
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
+  test-data: |
+    Пользователь - ktest3@yandex.ru;!Password123
+  steps:
+    - В меню выбрать Settings
+    - В поле Your name ввести новое имя
+    - В меню выбрать My Profile
+  expected-result: |
+    Имя пользователя сменилось на новое
+
+- summary: |
+    Отправка сообщения в чат
+  requirement: |
+    Пользователь должен иметь возможность пользоваться чатом для зарегистрированных пользователей
+  prerequisites: |
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
+  test-data: |
+    Пользователь - ktest3@yandex.ru;!Password123
+  steps:
+    - В поле чата написать сообщение
+    - Нажать Send
+  expected-result: |
+    Сообщение отображается в чате
+
+- summary: |
+    Просмотр рейтинга игроков
+  requirement: |
+    Пользователь должен иметь возможность просматривать рейтинг игроков за неделю, месяц и все время
+  prerequisites: |
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
+  test-data: |
+    Пользователь - ktest3@yandex.ru;!Password123
+  steps:
+    - Нажать Top List
+    - Перейти по вкладкам weekly, monthly, total
+  expected-result: |
+    Отображается рейтинг игроков
+
+- summary: |
+    Создание новой задачи
+  requirement: |
+    Пользователь должен иметь возможность добавить свою задачу
+  prerequisites: |
+    Открыта стартовая страница (https://codebattle.hexlet.io)
+    Пользователь авторизован
+  test-data: |
+    Пользователь - ktest3@yandex.ru;!Password123
+  steps:
+    - В меню выбрать Tasks
+    - Нажать Create new task
+    - Заполнить нужные поля в соответствии с условиями редактора
+    - Нажать Save
+  expected-result: |
+    Задача создана
