--- a/requirements.yml
+++ b/requirements.yml
@@ -15,12 +15,14 @@ functional:
   - Пользователь должен иметь возможность следить за идущей игрой других игроков
   - Пользователь должен иметь возможность посмотреть в записи завершенную игру
   - Пользователь должен иметь возможность поменять язык программирования во время игры
-  - Пользователь должен иметь возможность видеть редактор кода соперника во время игры
-  - Пользователь должен иметь возможность видеть вывод тестов
-  - Пользователь должен иметь возможность выбрать язык задачи (английский или русский)
+  - Пользователь должен иметь возможность выбрать язык задачи из доступных
   - Пользователь должен иметь возможность пользоваться чатом для зарегистрированных пользователей
   - Пользователь должен иметь возможность просматривать рейтинг игроков за неделю, месяц и все время
   - Пользователь должен иметь возможность создавать турнир со своими настройками
+  - Пользователь должен иметь возможность создать клан
+  - Пользователь должен иметь возможность присоединиться к уже созданному клану
+  - Пользователь должен иметь возможность добавить свою задачу
+  - Пользователь должен иметь возможность сменить имя
 non-functional:
   - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы
   - Сайт должен быть безопасным и защищать данные пользователя
