--- a/issues.yml
+++ b/issues.yml
@@ -1,3 +1,4 @@
 ---
 issues:
   - url: "https://github.com/hexlet-codebattle/codebattle/issues/2080#issuecomment-2808045762"
+  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1994#issuecomment-2816949627"
